# Sentinel

./: .env.example  .gitignore  LICENSE  README.md  SENTINEL_BUILD_PLAN.md  pyproject.toml
.github/workflows/: eval-gate.yml
dashboard/: README.md
data/: corpus_manifest.json  ground_truth.draft.jsonl  ground_truth.jsonl  ground_truth_audit.md  gt_seed_questions.jsonl  latency_report.json
data/corpus/: .gitkeep  PROVENANCE.json
docs/: architecture.md  implementation_plan.md  product_design.md  requirement.md
scripts/: assemble_ground_truth.py  bench_latency.py  build_ground_truth.py  fetch_corpus.py  gt_view.py  judge_calibration.py
sentinel/: __init__.py  config.py  generate.py  ingest.py  llm.py  logging_config.py  retrieve.py  schema.py  serve.py
sentinel/eval/: __init__.py  attribution.py  run_eval.py  store.py
tests/: test_eval.py  test_generate.py  test_retrieve.py  test_serve.py
